lib/ein/src/compile/type_inference/snapshots/ein__compile__type_inference__type_inferrer__tests__record__infer_type_of_comparison_operation_in_record_element_operation.snap
---
source: lib/ein/src/compile/type_inference/type_inferrer.rs
expression: "infer_types(&Module::from_definitions_and_type_definitions(vec![TypeDefinition\n                                                                ::\n                                                                new(\"Foo\",\n                                                                    record_type\n                                                                    .\n                                                                    clone())],\n                                                           vec![ValueDefinition\n                                                                ::\n                                                                new(\"x\",\n                                                                    RecordElementOperation\n                                                                    ::\n                                                                    new(record_type\n                                                                        .\n                                                                        clone(),\n                                                                        \"foo\",\n                                                                        RecordConstruction\n                                                                        ::\n                                                                        new(record_type\n                                                                            .\n                                                                            clone(),\n                                                                            vec\n                                                                            !\n                                                                            [(\"foo\"\n                                                                              .\n                                                                              into(),\n                                                                              Number\n                                                                              ::\n                                                                              new(42.0,\n                                                                                  SourceInformation\n                                                                                  ::\n                                                                                  dummy())\n                                                                              .\n                                                                              into())]\n                                                                            .\n                                                                            into_iter()\n                                                                            .\n                                                                            collect(),\n                                                                            SourceInformation\n                                                                            ::\n                                                                            dummy()),\n                                                                        \"bar\",\n                                                                        Operation\n                                                                        ::\n                                                                        with_type(types\n                                                                                  ::\n                                                                                  Number\n                                                                                  ::\n                                                                                  new(SourceInformation\n                                                                                      ::\n                                                                                      dummy()),\n                                                                                  Operator\n                                                                                  ::\n                                                                                  LessThan,\n                                                                                  Variable\n                                                                                  ::\n                                                                                  new(\"bar\",\n                                                                                      SourceInformation\n                                                                                      ::\n                                                                                      dummy()),\n                                                                                  Variable\n                                                                                  ::\n                                                                                  new(\"bar\",\n                                                                                      SourceInformation\n                                                                                      ::\n                                                                                      dummy()),\n                                                                                  SourceInformation\n                                                                                  ::\n                                                                                  dummy()),\n                                                                        SourceInformation\n                                                                        ::\n                                                                        dummy()),\n                                                                    types ::\n                                                                    Boolean ::\n                                                                    new(SourceInformation\n                                                                        ::\n                                                                        dummy()),\n                                                                    SourceInformation\n                                                                    ::\n                                                                    dummy(),)\n                                                                . into()]))"
---
Ok(
    Module {
        path: ModulePath {
            package: Package {
                name: "",
                version: "",
            },
            components: [],
        },
        type_definitions: [
            TypeDefinition {
                name: "Foo",
                type_: Record(
                    Record {
                        name: "Foo",
                        elements: {
                            "foo": Number(
                                Number {
                                    source_information: SourceInformation {
                                        source_name: "",
                                        location: Location {
                                            line_number: 0,
                                            column_number: 0,
                                        },
                                        line: "",
                                    },
                                },
                            ),
                        },
                        source_information: SourceInformation {
                            source_name: "",
                            location: Location {
                                line_number: 0,
                                column_number: 0,
                            },
                            line: "",
                        },
                    },
                ),
            },
        ],
        definitions: [
            ValueDefinition(
                ValueDefinition {
                    name: "x",
                    body: RecordElementOperation(
                        RecordElementOperation {
                            type_: Record(
                                Record {
                                    name: "Foo",
                                    elements: {
                                        "foo": Number(
                                            Number {
                                                source_information: SourceInformation {
                                                    source_name: "",
                                                    location: Location {
                                                        line_number: 0,
                                                        column_number: 0,
                                                    },
                                                    line: "",
                                                },
                                            },
                                        ),
                                    },
                                    source_information: SourceInformation {
                                        source_name: "",
                                        location: Location {
                                            line_number: 0,
                                            column_number: 0,
                                        },
                                        line: "",
                                    },
                                },
                            ),
                            key: "foo",
                            argument: RecordConstruction(
                                RecordConstruction {
                                    type_: Record(
                                        Record {
                                            name: "Foo",
                                            elements: {
                                                "foo": Number(
                                                    Number {
                                                        source_information: SourceInformation {
                                                            source_name: "",
                                                            location: Location {
                                                                line_number: 0,
                                                                column_number: 0,
                                                            },
                                                            line: "",
                                                        },
                                                    },
                                                ),
                                            },
                                            source_information: SourceInformation {
                                                source_name: "",
                                                location: Location {
                                                    line_number: 0,
                                                    column_number: 0,
                                                },
                                                line: "",
                                            },
                                        },
                                    ),
                                    elements: {
                                        "foo": Number(
                                            Number {
                                                value: 42.0,
                                                source_information: SourceInformation {
                                                    source_name: "",
                                                    location: Location {
                                                        line_number: 0,
                                                        column_number: 0,
                                                    },
                                                    line: "",
                                                },
                                            },
                                        ),
                                    },
                                    source_information: SourceInformation {
                                        source_name: "",
                                        location: Location {
                                            line_number: 0,
                                            column_number: 0,
                                        },
                                        line: "",
                                    },
                                },
                            ),
                            variable: "bar",
                            expression: Operation(
                                Operation {
                                    type_: Number(
                                        Number {
                                            source_information: SourceInformation {
                                                source_name: "",
                                                location: Location {
                                                    line_number: 0,
                                                    column_number: 0,
                                                },
                                                line: "",
                                            },
                                        },
                                    ),
                                    operator: LessThan,
                                    lhs: Variable(
                                        Variable {
                                            name: "bar",
                                            source_information: SourceInformation {
                                                source_name: "",
                                                location: Location {
                                                    line_number: 0,
                                                    column_number: 0,
                                                },
                                                line: "",
                                            },
                                        },
                                    ),
                                    rhs: Variable(
                                        Variable {
                                            name: "bar",
                                            source_information: SourceInformation {
                                                source_name: "",
                                                location: Location {
                                                    line_number: 0,
                                                    column_number: 0,
                                                },
                                                line: "",
                                            },
                                        },
                                    ),
                                    source_information: SourceInformation {
                                        source_name: "",
                                        location: Location {
                                            line_number: 0,
                                            column_number: 0,
                                        },
                                        line: "",
                                    },
                                },
                            ),
                            source_information: SourceInformation {
                                source_name: "",
                                location: Location {
                                    line_number: 0,
                                    column_number: 0,
                                },
                                line: "",
                            },
                        },
                    ),
                    type_: Boolean(
                        Boolean {
                            source_information: SourceInformation {
                                source_name: "",
                                location: Location {
                                    line_number: 0,
                                    column_number: 0,
                                },
                                line: "",
                            },
                        },
                    ),
                    source_information: SourceInformation {
                        source_name: "",
                        location: Location {
                            line_number: 0,
                            column_number: 0,
                        },
                        line: "",
                    },
                },
            ),
        ],
        export: Export {
            names: {},
        },
        imports: [],
    },
)
