lib/ein/src/compile/type_inference/snapshots/ein__compile__type_inference__type_inferrer__tests__record__infer_types_of_empty_records.snap
---
source: lib/ein/src/compile/type_inference/type_inferrer.rs
expression: "infer_types(&Module::from_definitions_and_type_definitions(vec![TypeDefinition\n                                                                ::\n                                                                new(\"Foo\",\n                                                                    record_type)],\n                                                           vec![VariableDefinition\n                                                                ::\n                                                                new(\"x\",\n                                                                    RecordConstruction\n                                                                    ::\n                                                                    new(reference_type\n                                                                        .\n                                                                        clone(),\n                                                                        Default\n                                                                        ::\n                                                                        default(),\n                                                                        SourceInformation\n                                                                        ::\n                                                                        dummy(),),\n                                                                    reference_type,\n                                                                    SourceInformation\n                                                                    ::\n                                                                    dummy(),)\n                                                                . into()]))"
---
Ok(
    Module {
        path: ModulePath {
            package: Package {
                name: "",
                version: "",
            },
            components: [],
        },
        type_definitions: [
            TypeDefinition {
                name: "Foo",
                type_: Record(
                    Record {
                        name: "Foo",
                        elements: {},
                        source_information: SourceInformation {
                            source_name: "",
                            location: Location {
                                line_number: 0,
                                column_number: 0,
                            },
                            line: "",
                        },
                    },
                ),
            },
        ],
        definitions: [
            VariableDefinition(
                VariableDefinition {
                    name: "x",
                    body: RecordConstruction(
                        RecordConstruction {
                            type_: Reference(
                                Reference {
                                    name: "Foo",
                                    source_information: SourceInformation {
                                        source_name: "",
                                        location: Location {
                                            line_number: 0,
                                            column_number: 0,
                                        },
                                        line: "",
                                    },
                                },
                            ),
                            elements: {},
                            source_information: SourceInformation {
                                source_name: "",
                                location: Location {
                                    line_number: 0,
                                    column_number: 0,
                                },
                                line: "",
                            },
                        },
                    ),
                    type_: Reference(
                        Reference {
                            name: "Foo",
                            source_information: SourceInformation {
                                source_name: "",
                                location: Location {
                                    line_number: 0,
                                    column_number: 0,
                                },
                                line: "",
                            },
                        },
                    ),
                    source_information: SourceInformation {
                        source_name: "",
                        location: Location {
                            line_number: 0,
                            column_number: 0,
                        },
                        line: "",
                    },
                },
            ),
        ],
        export: Export {
            names: {},
        },
        imports: [],
        ffi_imports: [],
    },
)
